
?

- Changed source/target compatibility to Java 11
- Bugfix: support for default blend mode when omitted (thanks @dalgarins)
- Support for ClassWithMembers and SystemClassWithMembers (thanks @dalgarins)

v0.1.1

- Added Xor blend mode
- Bugfix: was hard-coding layer index in flattening code
- Bugfix: was hard-coding image width in blending code

v0.1

- Initial version.